# Earth_Center

./: CMakeLists.txt  CMakeSettings.json  README  README.md  unitTests.cpp
Screenshots/: Screenshots - Shortcut.lnk
Textures/: fragment_shader.frag  vertex_shader.vert
mainLauncher/: CMakeLists.txt
resources/: Fossiles.xml  map.tmx  trex.xml
resources/Textures/: blued2.tsx  dance-removebg.tsx  demo.tmx  skull.tsx
sample/: CMakeLists.txt  Collectable.h  Destroyable.h  Enemy.cpp  Enemy.h  Fossil.cpp  Game.cpp  Game.h  GameWorld.cpp  GameWorld.h  Player.cpp  Player.h  Source.cpp  Tile.cpp
src/: AudioManager.cpp  AudioManager.h  CMakeLists.txt  Collectable.cpp  Collectable.h  CollectableFactory.cpp  CollectableFactory.h  Collider.cpp  Collider.h  Crystal.cpp  Crystal.h  Destroyable.cpp  Destroyable.h  Enemy.cpp  Enemy.h  Finish.cpp  Finish.h  Fossil.cpp  Fossil.h  Game.cpp  Game.h  GameWorld.cpp  GameWorld.h  Magnet.cpp  Magnet.h  Obsatcle.cpp  Obstacle.h  Ore.cpp  Ore.h  Player.cpp  Player.h  Tile.cpp  Tile.h  myMain.cpp
